@@ -7,7 +7,6 @@ import net.inetalliance.angular.exception.BadRequestException;
 import net.inetalliance.angular.exception.ForbiddenException;
 import net.inetalliance.angular.exception.NotFoundException;
 import net.inetalliance.angular.list.Listable;
-import net.inetalliance.funky.functors.P1;
 import net.inetalliance.log.Log;
 import net.inetalliance.potion.Locator;
 import net.inetalliance.potion.info.Info;
@@ -17,7 +16,6 @@ import net.inetalliance.types.Duration;
 import net.inetalliance.types.json.Json;
 import net.inetalliance.types.json.JsonList;
 import net.inetalliance.types.json.JsonMap;
-import net.inetalliance.types.struct.maps.LazyMap;
 import org.joda.time.DateMidnight;
 
 import javax.servlet.annotation.WebServlet;
@@ -26,9 +24,9 @@ import javax.servlet.http.HttpServletResponse;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static com.callgrove.obj.Call.Q.*;
-import static com.callgrove.obj.Opportunity.Q.createdBefore;
-import static net.inetalliance.funky.functors.types.str.StringFun.empty;
+import static com.callgrove.obj.Call.*;
+import static com.callgrove.obj.Opportunity.createdBefore;
+import static net.inetalliance.funky.StringFun.isEmpty;
 import static net.inetalliance.log.Log.getInstance;
 import static net.inetalliance.potion.Locator.*;
 import static net.inetalliance.sonar.reports.CachedGroupingRangeReport.simple;
@@ -41,9 +39,10 @@ public class Review
 	protected void get(final HttpServletRequest request, final HttpServletResponse response)
 			throws Exception {
 		final Agent loggedIn = Startup.getAgent(request);
+		assert loggedIn != null;
 		final String callCenterParam = request.getParameter("callCenter");
 		final CallCenter callCenter;
-		if (empty.$(callCenterParam)) {
+		if (isEmpty(callCenterParam)) {
 			if (loggedIn.isManager() || loggedIn.getManaged() != null) {
 				final Iterator<CallCenter> iterator = loggedIn.getViewableCallCenters().iterator();
 				callCenter = iterator.hasNext() ? iterator.next() : null;
@@ -51,7 +50,7 @@ public class Review
 				callCenter = null;
 			}
 		} else {
-			callCenter = Locator.$(new CallCenter(new Integer(callCenterParam)));
+			callCenter = Locator.$(new CallCenter(Integer.valueOf(callCenterParam)));
 			if (callCenter == null) {
 				throw new NotFoundException("Could not find call center %s", callCenterParam);
 			}
@@ -63,112 +62,92 @@ public class Review
 
 		final Set<Agent> viewableAgents = callCenter == null
 				? Collections.singleton(loggedIn)
-				: $$(Agent.Q.active.and(Agent.Q.withCallCenter(callCenter)));
+				: $$(Agent.isActive.and(Agent.withCallCenter(callCenter)));
 		if (viewableAgents.isEmpty()) {
 			throw new BadRequestException("%s does not have any viewable agents", loggedIn.getLastNameFirstInitial());
 		}
 		final String dayParam = request.getParameter("date");
 		try {
-			final DateMidnight day = empty.$(dayParam)
+			final DateMidnight day = isEmpty(dayParam)
 					? new DateMidnight()
 					: simple.parseDateTime(dayParam).toDateMidnight();
-			final Query<Call> q = queue.and(active.negate()).and(inInterval(day.toInterval())).and(withAgentIn
+			final Query<Call> q = isQueue.and(isActive.negate()).and(inInterval(day.toInterval())).and(withAgentIn
 					(viewableAgents));
 			final Collection<Json> json = new ArrayList<>(count(q));
-			forEach(q, new P1<Call>() {
+			forEach(q, call -> {
+				final JsonMap map = new JsonMap()
+						.$("key")
+						.$("created")
+						.$("resolution")
+						.$("notes")
+						.$("todo")
+						.$("dumped")
+						.$("reviewed")
+						.$("silent");
+				Info.$(Call.class).fill(call, map);
+				final CallerId callerId = call.getCallerId();
+				final Site site = call.getSite();
+				final Agent agent = call.getAgent();
+				map.$("callerId",
+						new JsonMap()
+								.$("name", callerId == null ? "Unknown" : callerId.getName())
+								.$("number", callerId == null ? "" : callerId.getNumber()))
+						.$("site", site == null ? null : new JsonMap()
+								.$("abbreviation", site.getAbbreviation().toString()))
+						.$("agent", agent == null ? null : new JsonMap()
+								.$("name", agent.getFirstNameLastInitial())
+								.$("key", agent.key))
+						.$("queue", call.getQueue().getName())
+						.$("productLine", call.getQueue().getProductLine().getName())
+						.$("duration", new Duration(call.getDuration().toDurationMillis()).getAbbreviation(true));
+				final Agent blame = call.getBlame();
+				map.$("blame", blame == null ? null : new JsonMap()
+						.$("name", blame.getFirstNameLastInitial())
+						.$("key", blame.key));
 
-				public void $(final Call call) {
-					final JsonMap map = new JsonMap()
-							.$("key")
-							.$("created")
-							.$("resolution")
-							.$("notes")
-							.$("todo")
-							.$("dumped")
-							.$("reviewed")
-							.$("silent");
-					Info.$(Call.class).fill(call, map);
-					final CallerId callerId = call.getCallerId();
-					final Site site = call.getSite();
-					final Agent agent = call.getAgent();
-					map.$("callerId",
-							new JsonMap()
-									.$("name", callerId == null ? "Unknown" : callerId.getName())
-									.$("number", callerId == null ? "" : callerId.getNumber()))
-							.$("site", site == null ? null : new JsonMap()
-									.$("abbreviation", site.getAbbreviation().toString()))
-							.$("agent", agent == null ? null : new JsonMap()
-									.$("name", agent.getFirstNameLastInitial())
-									.$("key", agent.key))
-							.$("queue", call.getQueue().getName())
-							.$("productLine", call.getQueue().getProductLine().getName())
-							.$("duration", new Duration(call.getDuration().toDurationMillis()).getAbbreviation(true));
-					final Agent blame = call.getBlame();
-					map.$("blame", blame == null ? null : new JsonMap()
-							.$("name", blame.getFirstNameLastInitial())
-							.$("key", blame.key));
-
-					final Query<Contact> cQ = Contact.Q.withPhoneNumber(call.getRemoteCallerId().getNumber());
-					final JsonList contacts = new JsonList(count(cQ));
-					final Map<Agent, Collection<Opportunity>> opps = new LazyMap<Agent, Collection<Opportunity>>(
-							new HashMap<>(0)) {
-						@Override
-						public Collection<Opportunity> create(final Agent agent) {
-							return new ArrayList<>();
-						}
-					};
-					forEach(cQ, new P1<Contact>() {
-						@Override
-						public void $(final Contact contact) {
-							final JsonMap map = new JsonMap()
-									.$("id", contact.id)
-									.$("name", contact.getFullName())
-									.$("selected", contact.equals(call.getContact()));
-							contacts.add(map);
-							forEach(Opportunity.Q.withContact(contact).and(createdBefore(call.getCreated().plusHours(1))),
-									new P1<Opportunity>() {
-										@Override
-										public void $(final Opportunity o) {
-											opps.get(o.getAssignedTo()).add(o);
-										}
-									});
-						}
-					});
-					map.$("contacts", contacts);
-					final SortedQuery<Segment> sQ = Segment.Q.withCall(call);
-					final JsonList segments = new JsonList(count(sQ));
-					map.$("segments", segments);
-					forEach(sQ, new P1<Segment>() {
-						@Override
-						public void $(final Segment segment) {
-							final Agent agent = segment.getAgent();
-							final JsonMap sMap = new JsonMap()
-									.$("created", segment.getCreated())
-									.$("answered", segment.getAnswered())
-									.$("ended", segment.getEnded())
-									.$("talktime", segment.getAnswered() == null ? null : new Duration(segment.getTalkTime()
-											.toDurationMillis()).getAbbreviation(true))
-									.$("agent", agent == null ? null : new JsonMap()
-											.$("name", agent.getFirstNameLastInitial())
-											.$("key", agent.key));
-							if (agent != null) {
-								final JsonList oList = opps.get(agent).stream().map(o -> new JsonMap()
-										.$("id", o.id)
-										.$("notes", o.getNotes())
-										.$("stage", o.getStage())
-										.$("productLine", o.getProductLineName())
-										.$("estimatedClose", o.getEstimatedClose())
-										.$("existing", o.getCreated().isBefore(call.getCreated()))
-										.$("reminder", o.getReminder())).collect(Collectors.toCollection(JsonList::new));
-								sMap.$("opportunities", oList);
-							}
-							segments.add(sMap);
-						}
-					});
-					json.add(map);
-				}
+				final Query<Contact> cQ = Contact.withPhoneNumber(call.getRemoteCallerId().getNumber());
+				final JsonList contacts = new JsonList(count(cQ));
+				final Map<Agent, Collection<Opportunity>> opps = new HashMap<>();
+				forEach(cQ, contact -> {
+					final JsonMap map1 = new JsonMap()
+							.$("id", contact.id)
+							.$("name", contact.getFullName())
+							.$("selected", contact.equals(call.getContact()));
+					contacts.add(map1);
+					forEach(Opportunity.withContact(contact).and(createdBefore(call.getCreated().plusHours(1))),
+						o -> opps.computeIfAbsent(o.getAssignedTo(),a-> new ArrayList<>()).add(o));
+				});
+				map.$("contacts", contacts);
+				final SortedQuery<Segment> sQ = Segment.withCall(call);
+				final JsonList segments = new JsonList(count(sQ));
+				map.$("segments", segments);
+				forEach(sQ, segment -> {
+					final Agent agent1 = segment.getAgent();
+					final JsonMap sMap = new JsonMap()
+							.$("created", segment.getCreated())
+							.$("answered", segment.getAnswered())
+							.$("ended", segment.getEnded())
+							.$("talktime", segment.getAnswered() == null ? null : new Duration(segment.getTalkTime()
+									.toDurationMillis()).getAbbreviation(true))
+							.$("agent", agent1 == null ? null : new JsonMap()
+									.$("name", agent1.getFirstNameLastInitial())
+									.$("key", agent1.key));
+					if (agent1 != null) {
+						final JsonList oList = opps.get(agent1).stream().map(o -> new JsonMap()
+								.$("id", o.id)
+								.$("notes", o.getNotes())
+								.$("stage", o.getStage())
+								.$("productLine", o.getProductLineName())
+								.$("estimatedClose", o.getEstimatedClose())
+								.$("existing", o.getCreated().isBefore(call.getCreated()))
+								.$("reminder", o.getReminder())).collect(Collectors.toCollection(JsonList::new));
+						sMap.$("opportunities", oList);
+					}
+					segments.add(sMap);
+				});
+				json.add(map);
 			});
-			respond(response, Listable.Impl.formatResult(json));
+			respond(response, Listable.formatResult(json));
 		} catch (IllegalArgumentException e) {
 			log.error(e);
 			throw new BadRequestException("Unparseable day specified: %s", dayParam);
